# ccnx-name-reader

./: README.md
src/: ccnx_NameReader.c  ccnx_NameReader.h
src/test/: CMakeLists.txt  test_ccnx_NameReader.c
